--- a/shenoa-e14/June 14 Day 28/MorningLectures/styles.css
+++ b/shenoa-e14/June 14 Day 28/MorningLectures/styles.css
@@ -74,6 +74,17 @@ a:hover::after {
     transform: scaleX(1);
     transform-origin: bottom left;
 }
+/* Input Fields */
+input {
+    border-radius: 10px;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid var(--secondary-color);
+    width: 100%;
+    margin-bottom: 10px;
+    overflow: auto;
+    resize: none;
+}
 
 /* Buttons */
 button {
